--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,3 +4,7 @@ django-cors-headers==3.8.0
 djangorestframework==3.12.4
 psycopg2-binary==2.9.1
 python-decouple==3.4
+psycopg2==2.9.2
+pandas==1.3.4
+sqlalchemy==1.4.27
+requests==2.26.0
