--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,6 @@ djangorestframework==3.12.4
 psycopg2-binary==2.9.1
 python-decouple==3.4
 psycopg2==2.9.2
-pandas==1.3.4
+pandas
 sqlalchemy==1.4.27
 requests==2.26.0
